--- a/conditions-treated.html
+++ b/conditions-treated.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Sep 06 2021 03:48:59 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Sep 06 2021 05:51:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6eaf5cc7ed7c72d89408ec" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -284,7 +284,7 @@ drift.load('r73nxaxiv89c');
             </div>
             <div class="_3_block">
               <ul role="list" class="ailment_list w-list-unstyled">
-                <li class="ailment_list_item">Pheumonia</li>
+                <li class="ailment_list_item">Pneumonia</li>
                 <li class="ailment_list_item">Valley Fever</li>
               </ul>
             </div>
@@ -429,7 +429,7 @@ drift.load('r73nxaxiv89c');
             </div>
             <div class="_3_block">
               <ul role="list" class="ailment_list w-list-unstyled">
-                <li class="ailment_list_item">Fibromayalga</li>
+                <li class="ailment_list_item">Fibromyalgia</li>
                 <li class="ailment_list_item">Multiple Sclerosis</li>
               </ul>
             </div>
