--- a/traditional-chinese-herbs.html
+++ b/traditional-chinese-herbs.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Sep 06 2021 05:51:11 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Sep 06 2021 17:27:26 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60d42af237a0538a318f5d00" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -42,7 +42,133 @@ drift.load('r73nxaxiv89c');
 </script>
   <!--  End of Async Drift Code  -->
 </head>
-<body>
+<body class="ryu_body">
+  <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
+    <div class="menu_container wf-section">
+      <div class="brand_block">
+        <a href="index.html" class="link-block w-inline-block">
+          <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
+        </a>
+      </div>
+      <nav role="navigation" class="nav-menu w-nav-menu">
+        <a href="index.html" class="nav_link w-nav-link">Home</a>
+        <a href="team.html" class="nav_link w-nav-link">Team</a>
+        <a href="services.html" class="nav_link w-nav-link">Services</a>
+        <a href="conditions-treated.html" class="nav_link w-nav-link">Conditions Treated</a>
+        <a href="testimonials.html" class="nav_link w-nav-link">Testimonials</a>
+        <a href="blog.html" class="nav_link w-nav-link">Blog</a>
+        <a href="contact.html" class="nav_link w-nav-link">Contact</a>
+      </nav>
+      <div class="menu-button w-nav-button">
+        <div class="w-icon-nav-menu"></div>
+      </div>
+    </div>
+  </div>
+  <a href="#" class="_404_link_block w-inline-block">
+    <div data-w-id="6e520bce-771e-ed2e-b960-e98ad9afe165" data-animation-type="lottie" data-src="documents/ryu_404.json" data-loop="0" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0"></div>
+  </a>
+  <div class="footer_section wf-section">
+    <div class="main_container">
+      <div class="_4_block_row_footer">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
+          <h3 class="footer_h3">Ryu Acupuncture Clinic</h3>
+          <p class="disclaimer_para">Our mission is to provide a safe, preventative and synergistic treatment for each unique individual. Alongside communicating with the patient, we strive to formulate a treatment plan to guide you to your journey of balance and systematic restoration.</p>
+        </div>
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block">
+          <h3 class="footer_h3">Navigation</h3>
+          <div class="w-layout-grid footer_grid_2_block">
+            <ul role="list" class="w-list-unstyled">
+              <li class="footer_link">
+                <a href="team.html" class="link_white">Team</a>
+              </li>
+              <li class="footer_link">
+                <a href="services.html" class="link_white">Services</a>
+              </li>
+              <li class="footer_link">
+                <a href="conditions-treated.html" class="link_white">Conditions Treated</a>
+              </li>
+              <li class="footer_link">
+                <a href="testimonials.html" class="link_white">Testimonials</a>
+              </li>
+              <li class="footer_link">
+                <a href="blog.html" class="link_white">Blog</a>
+              </li>
+              <li class="footer_link">
+                <a href="contact.html" class="link_white">Contact</a>
+              </li>
+            </ul>
+            <ul role="list" class="w-list-unstyled">
+              <li class="footer_link">
+                <a href="terms-of-use.html" class="link_white">Terms of Use</a>
+              </li>
+              <li class="footer_link">
+                <a href="privacy.html" class="link_white">Privacy Policy</a>
+              </li>
+              <li class="footer_link">
+                <a href="accessibility.html" class="link_white">Accessibility</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e188" class="_4_block">
+          <h3 class="footer_h3">Hours</h3>
+          <div class="w-layout-grid footer_grid_hours_block">
+            <ul role="list" class="list w-list-unstyled">
+              <li class="footer_hours">Mon: </li>
+              <li class="footer_hours">Tue:</li>
+              <li class="footer_hours">Wed:</li>
+              <li class="footer_hours">Thu:</li>
+              <li class="footer_hours">Fri:</li>
+              <li class="footer_hours">Sat:</li>
+              <li class="footer_hours">Sun:</li>
+            </ul>
+            <ul role="list" class="list w-list-unstyled">
+              <li class="footer_hours">9:30AM - 6:00PM</li>
+              <li class="footer_hours">Closed</li>
+              <li class="footer_hours">9:30AM - 6:00PM</li>
+              <li class="footer_hours">Closed</li>
+              <li class="footer_hours">9:30AM - 6:00PM</li>
+              <li class="footer_hours">9:00AM - 1:30PM</li>
+              <li class="footer_hours">Closed</li>
+            </ul>
+          </div>
+        </div>
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e1a5" class="_4_block">
+          <h3 class="footer_h3">Contact Us</h3>
+          <div class="w-layout-grid footer_grid_1_block">
+            <ul id="w-node-_878de897-29f2-0589-e955-79ee46b4e1a9-46b4e169" role="list" class="list-2 w-list-unstyled">
+              <li class="footer_link">
+                <a href="https://www.google.com/maps/place/3808+W+Riverside+Dr,+Burbank,+CA+91505/@34.1523337,-118.3432475,17z/data=!3m1!4b1!4m8!1m2!2m1!1s3808+W.+Riverside+Dr!3m4!1s0x80c2bfcc17e29199:0x8c16f2e46cae7e94!8m2!3d34.1523293!4d-118.3410588" class="footer_link">3808 W. Riverside Dr., Ste 510</a>
+              </li>
+              <li class="footer_link">Burbank, CA 91505</li>
+              <li class="footer_link">Phone: <a href="tel:8188419790" class="footer_link">(818) 841-9790</a>
+              </li>
+              <li class="footer_link">Text: <a href="tel:9095662258" class="footer_link">(909) 566-2258</a>
+              </li>
+              <li class="footer_link">Fax: <a href="tel:8188419092" class="footer_link">(818) 841-9092</a>
+              </li>
+              <li class="footer_link">
+                <a href="mailto:ryuacupuncture@yahoo.com" class="footer_link">ryuacupuncture@yahoo.com</a>
+              </li>
+              <li class="footer_icons">
+                <a href="https://www.instagram.com/ryuacupuncture/" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://www.facebook.com/Ryu-Acupuncture-Clinic-229147904214537" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://twitter.com/RyuAcupuncture" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://www.linkedin.com/in/jay-ryu-569824211/" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://www.youtube.com/channel/UCPa6LxRfZaU_Ml_2v72rDew" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://www.yelp.com/biz/ryu-acupuncture-clinic-burbank-3" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://g.page/RyuAcupuncture?gm" target="_blank" class="footer_link-2 footer_icon"></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="legal_block">
+      <div class="text-block-4">Medical Disclaimer: All content on this site is for information and education purposes only, it is not intended to provide medical advice.</div>
+      <div class="legal_text">© 2021 Ryu Acupuncture Clinic, Inc - All rights reserved.</div>
+    </div>
+  </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f686908b6be43eb4fb09bd7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/ryu-acupuncture.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
