--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Sep 06 2021 17:27:26 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Sep 07 2021 04:13:10 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -82,7 +82,7 @@ drift.load('r73nxaxiv89c');
   <div id="About" class="about_section wf-section">
     <div class="main_container">
       <div class="block_text_pre_h2">ABOUT US</div>
-      <h2 class="section_h2">What sets us apart</h2>
+      <h2 class="section_h2">Why we&#x27;re the best acupuncture Burbank has to offer</h2>
       <div class="_4_block_row">
         <div class="_4_block"><img src="images/experienced_acupuncturists.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="a7c7d54a-eaff-e079-4052-3746870b5e85" alt="A blue outline of a resume with several bullet points of achievement and a ribbon of accolade." class="eastern_medicine_icons">
           <h3 class="icon_h3">Over 20+ Years Experience</h3>
@@ -105,7 +105,7 @@ drift.load('r73nxaxiv89c');
         <div class="_2_block">
           <div class="block_text_pre_h2_left">CLEANLINESS</div>
           <h2 class="section_h2_left">Hospital clean office with Covid-19 adherences</h2>
-          <p>We take pride in keeping our office hospital clean while meeting and exceeding Covid-19 protocols. Treatment rooms are thoroughly sterilized after each patient. Our staff wears face masks at all times and we offer hand in the receptions area as well as the treatment rooms for patient use. We adamantly adhere to the CDC guidelines to ensure that health of our patients are never in jeopardy.</p>
+          <p>We take pride in keeping our office hospital clean while meeting and exceeding Covid-19 protocols. Treatment rooms are thoroughly sterilized after each patient. Our staff wears face masks at all times and we offer hand in the receptions area as well as the treatment rooms for patient use. We adamantly adhere to the CDC guidelines to ensure that health of our patients are never in jeopardy. </p>
         </div>
         <div data-w-id="bcd27994-ddcf-2e98-a30f-12638afa79cd" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_360_frame_block">
           <div class="ryu_360_block w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!4v1601787402564!6m8!1m7!1sCAoSLEFGMVFpcE5keFd3ejdmWElESXZEWUlSWFFUVnY4MUJtSFBqemtCazd3TUpH!2m2!1d34.15229581276014!2d-118.341232649982!3f20!4f0!5f0.7820865974627469" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" title="360 degree view of Ryu Acupuncture"></iframe></div>
