--- a/acupuncture.html
+++ b/acupuncture.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Sep 10 2021 06:48:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Sep 12 2021 06:23:58 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60d1879768e5d0e9d6625f09" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -89,8 +89,6 @@ drift.load('r73nxaxiv89c');
         <li><strong>Circulatory:</strong> heart conditions, high blood pressure, low blood pressure</li>
         <li><strong>Addiction:</strong> alcohol, drug abuse, smoking, weight loss</li>
       </ul>
-      <h2 class="service_detail_h2">What happens during an acupuncture session?</h2>
-      <p class="service_detail_para">During your initial exam, a practitioner will ask you about various aspects of your health and lifestyle. They may also check for imbalances through observation and pulse-taking. This information is used to create an accurate diagnosis which can be completed in 30 minutes or less. Your treatment begins with acupuncture after this interview process ends; it lasts around 30-90 minutes on average depending on the severity of symptoms being treated by the practitioner&#x27;s analysis.</p>
       <h2 class="service_detail_h2">Is acupuncture safe?</h2>
       <p class="service_detail_para">Acupuncture is an all-natural, drug-free therapy that is safe and effective. According to the World Health Organization, there are no reports of acupuncture being harmful when used appropriately. The stainless steel needles used in acupuncture are pre-sterilized and disposed of after each treatment. The most common side effect is soreness, redness and bruising on the site of needle penetration.<br><br>Acupuncture has one of the best safety records in comparison to other forms of treatment. There has never been a reported case of an acupuncture needle causing infection to the patient. The needles that are used for acupuncture easily break and bend, meaning that if they were inserted incorrectly, they would not cause any harm as the patient would feel discomfort and stop the acupuncturist before insertion was complete.</p>
       <h2 class="service_detail_h2">Does acupuncture hurt?</h2>
@@ -100,7 +98,7 @@ drift.load('r73nxaxiv89c');
       <h2 class="service_detail_h2">Why choose acupuncture?</h2>
       <p class="service_detail_para">The reason you should choose acupuncture as your preferred method of treatment is that acupuncture is safe, effective and has no side effects. Acupuncture&#x27;s success rate is about twenty times higher than that of traditional medicine.<br><br>Acupuncture is not invasive so it does not harm any healthy tissue or organ. Unlike some forms of traditional medicine such as chemotherapy and radiation therapy, acupuncture does not have negative side effects and it poses no threat to life. Acupuncture treats the problem at its source while maintaining a high level of safety for patients. Acupuncture is also economical, as traditional medicine is quite costly.</p>
       <h2 class="service_detail_h2">Will insurance cover my acupuncture treatments?</h2>
-      <p class="service_detail_para">At Ryu Acupuncture Clinic, we accept most PPO plans at the out-of-network level. We will gladly check your insurance coverage for acupuncture care and bill your insurance or refer you to a provider who does cover it if need be. Additionally, some medical flex spending accounts can be used towards payment of acupuncture services; please inquire with us about this option upon scheduling an appointment.<br><br>If your health plan doesn&#x27;t include acupuncture in its benefits package or you&#x27;re underinsured after checking with our staff on what might work best given the specifics of where you stand financially right now - no worries. Many people choose discounted packages when their employers do not offer them coverage through traditional means (insurance).</p>
+      <p class="service_detail_para">At Ryu Acupuncture Clinic, we accept most plans in and out-of-network insurance. Please call to see if your benefits apply.</p>
     </div>
   </div>
   <div class="footer_section wf-section">
